2006-06-15  Richard Hoelscher  <rah@rahga.com>

	* README: Unusued, removed.

2006-05-19  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.desktop.in (Icon): Really fix the icon name this time.

2006-05-11  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.desktop.in (Icon): Use the correct icon name. See bug
	#341245.

2006-04-23  Callum McKenzie  <callum@spooky-possum.org>

	* boo.svg: 
	* ufo.svg:
	* robots.svg: Remove the opaque backgrounds.

2006-04-22  Callum McKenzie  <callum@spooky-possum.org>
	
	* gnobots.c:
	* graphics.h:
	* graphics.c: Add a checkered background. Draw it explicitly
	rather than setting the window background. As a side-effect
	converted draw_tile_pixmap from pixel to grid coordinates.

	* gnobots.c:
	* graphics.c:
	* graphics.h:
	* properties.h:
	* properties.c: Load only one set of graphics at a time. Use
	GamesFileList to create the list of themes. Allow all image 
	formats to be used (including SVG, but also, unfortunately, the 
	bubble-graphics).

	* ufo.svg:
	* robots.svg:
	* boo.svg:
	* Makefile.am: Add Nicu's SVG themes.

2006-04-20  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.schemas.in: 
	* gnobots.c:
	* gbdefs.h:
	* game.c:
	* properties.c:
	* graphics.h: 
	* graphics.c: Make the graphics scalable. Nothing fancy. We even
	keep the old drawing engine. Also no SVG support.

2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* menu.c: Update About dialog

2006-04-04  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c  : Patch from Przemys©aw Grzegorczyk to unref
	the GnomeProgram in all main loops.

2006-04-02  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Remove libgnomeui/gnome-window-icon.h from the
	includes.

	* Makefile.am: Move the icon cache update down the build tree.

2006-03-31  Callum McKenzie  <callum@spooky-possum.org>

	* menu.c (about_cb): Add the icon to the about dialog properties.

	* gnobots2.desktop.in: 
	* gnobots.c: 